--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,13 @@
 <h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<%= form_for @user do |f| %>
+    <%= f.label :f_name, "First Name:" %>
+    <%= f.text_field :f_name %>
+    <%= f.label :l_name, "Last Name:" %>
+    <%= f.text_field :l_name %>
+    <%= f.label :email, "Email:" %>
+    <%= f.text_field :email %>
+    <%= f.label :password, "Password:" %>
+    <%= f.text_field :password %>
+    <%= f.label :password_confirmation, "Confirm Password:" %>
+    <%= f.text_field :password_confirmation %>
+<% end %>
