--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
 <h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<p><%= @user.f_name %></p>
+<%= link_to  "Log Out", '/logout', method: 'delete' %>
