--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <h1>Users#show</h1>
 <p><%= @user.f_name %></p>
 <%= link_to  "Log Out", '/logout', method: 'delete' %>
+<%= link_to  "Edit Profile", edit_user_path %>
