--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,10 @@
 <p><%= @user.f_name %></p>
 <%= link_to  "Log Out", '/logout', method: 'delete' %>
 <%= link_to  "Edit Profile", edit_user_path %>
+
+<br><br><hr>
+<% @categories.each do |c| %>
+    <%= link_to  "#{c.title}", category_path(c) %>
+<% end %>
+
+
