--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,7 @@
 <h1>Categories#index</h1>
 <h2><%= @category.title %></h2>
-<%= link_to  "Back", user_path %>
+<% @category.blogs.each do |b| %>
+    <h1><%= b.title %></h1>
+<% end %>
+
+<%= link_to  "Back", user_path(@user) %>
