fixed bugs for user delete method and intiated blog create edit and delete

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,3 +2,6 @@
 <% @blogs.each do |b| %>
     <%= link_to  b.title, blog_path(b) %>
 <% end %>
+
+
+<%= link_to  "Create New Blog", new_blog_path %>
