--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,2 +1,13 @@
 <h1>Blogs#new</h1>
-<p>Find me in app/views/blogs/new.html.erb</p>
+<%= form_for :blog do |f| %>
+    <%= f.label :category, 'Category:', class: '' %>
+    <%= f.collection_select :category, @categories, :title, :title %>
+    
+    <%= f.label :title, 'Title:', class: '' %>
+    <%= f.text_field :title, class: '' %>
+
+    <%= f.label :body, 'Body:', class: '' %>
+    <%= f.text_area :body, class: '' %>
+    <%= f.submit %>
+
+<% end %>
