--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,5 +1,9 @@
 <h1>Blogs#show</h1>
 <h2><%= @blog.title %></h2>
 
+<%= link_to  "Edit Blog", edit_blog_path(@blog) %>
+
+<%= link_to  "Delete Blog", delete_blog_path, method: "delete" %>
+
 
 <%= link_to  "Go Back", blogs_path %>
