--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,6 +2,7 @@
 <h2><%= @category.title %></h2>
 <% @category.blogs.each do |b| %>
     <h1><%= b.title %></h1>
+    <h2><%= b.user.id %></h2>
 <% end %>
 
 <%= link_to  "Back", user_path(@user) %>
