--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 <%= link_to  "Edit Profile", edit_user_path %>
 
 <div>
-    <%= link_to  "View Blogs", blogs_path %>
+    <%= link_to  "View Blogs", user_blogs_path(@user.id) %>
 </div>
 
 <br><br><hr>
