--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Blogs#index</h1>
-<% @blogs.each do |b| %>
-    <%= link_to  b.title, blog_path(b) %>
+<% @user.blogs.each do |b| %>
+    <h1><%= b.title %></h1>
+    <h3><%= link_to  "Edit blog", user_blog_path(@user.id, b.id) %></h3>
 <% end %>
 
 
-<%= link_to  "Create New Blog", new_blog_path %>
+<%= link_to  "Create Blog", new_user_blog_path %>
+
