finished functionality for commments

--- a/app/views/public_blogs/show.html.erb
+++ b/app/views/public_blogs/show.html.erb
@@ -2,5 +2,13 @@
 <h1><%= @blog.title %></h1>
 <h2><%= @blog.body %></h2>
 
+<% @blog.comments.each do |c| %>
+    <h5><%= c.body %> by: <%= c.user.id %></h5>
+<% end %>
+
+
+
+<%= link_to  "Leave Comment", new_category_public_blog_comment_path(params[:category_id], @blog.id) %>
+
 
 <%= link_to  "Go Back", category_path(params[:category_id]) %>
