--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    <div class="container">
+    <div id="wrapper">
+      <%= render 'partials/header' %>
       <%= render 'partials/flash' %>
         <%= yield %>
     </div>
