--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,21 @@
-<h1>Users#show</h1>
-<p><%= @user.f_name %></p>
-<%= link_to  "Log Out", '/logout', method: 'delete' %>
-<%= link_to  "Edit Profile", edit_user_path %>
+<div class="container">
+    <div class="jumbotron">
+            <h1>Users#show</h1>
+            <p><%= @user.f_name %></p>
+            <%= link_to  "Edit Profile", edit_user_path %>
+            
+            <div>
+                <%= link_to  "View Blogs", user_blogs_path(@user.id) %>
+            </div>
+            <div>
+                <%= link_to  "View Comments", user_comments_path(@user.id) %>
+            </div>
+            <br><br><hr>
+            <% @categories.each do |c| %>
+                <%= link_to  "#{c.title}", category_path(c) %>
+            <% end %>
+    </div>
+</div>
 
-<div>
-    <%= link_to  "View Blogs", user_blogs_path(@user.id) %>
-</div>
-<div>
-    <%= link_to  "View Comments", user_comments_path(@user.id) %>
-</div>
-<br><br><hr>
-<% @categories.each do |c| %>
-    <%= link_to  "#{c.title}", category_path(c) %>
-<% end %>
 
 
