--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,16 +1,21 @@
-<header class="container-fluid bg-primary">
+<header class="container-fluid bg-dark">
     <div class="row">
-        <div class="col-md-2">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                <%= icon('flag') %>
-            </button>
+        <div class="col-md-4 align-middle">
+            <% if logged_in? %>
+                <%= render 'partials/toggleBtn' %>
+            <% end %>
+            
         </div>
-        <div class="col-md-6 text-center">
-            <h3 class=" text-white">Blog It</h3>
+        <div class="col-md-4 text-center">
+            <h3 class="text-white"><%= icon('cloud') %> <a href="/users" class="headingH1">BlogIT</a> <%= icon('pencil') %></h3>
         </div>
         <div class="col-md-4 align-middle text-right">
-            <%= link_to  "Sign Up", new_user_path, class: 'header-link' %>
-            <%= link_to  "Log In", new_session_path, class: 'header-link' %>
+            <% if !logged_in? %>
+                <%= link_to  "Sign Up", new_user_path, class: 'header-link fa fa-user' %>
+                <%= link_to  "Log In", new_session_path, class: 'header-link fa fa-sign-in' %>
+            <% else %>
+                <%= link_to  "Log Out", '/logout', method: 'delete', class: 'header-link fa fa-sign-out' %>
+            <% end %>
         </div>
     </div>
 </header>
