--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,13 @@
-<h1>Users#index</h1>
-<h1>welcome page</h1>
-<%= link_to  "Sign Up", new_user_path %>
-<%= link_to  "Log In", new_session_path %>
+<div class="container">
+    <div class="jumbotron">
+        <h1 class="display-3 text-center">Welcome to BlogIT!</h1>
+        <p class="lead text-center">
+            The easiest place to blog about your interest, read other interesting blogs, and leave your opinions!
+        </p>
+        <hr class="my-4">
+        <p class="text-center">It's easy just sign up and start creating your own blogs!</p>
+        <p class="lead text-center">
+            <%= link_to  "Sign Up", new_user_path, class: 'btn btn-dark btn-lg fa fa-user' %>
+        </p>
+    </div>
+</div>
