--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,20 @@
-<h1>Users#new</h1>
-<%= form_for @user do |f| %>
-    <%= f.label :f_name, "First Name:" %>
-    <%= f.text_field :f_name %>
-    <%= f.label :l_name, "Last Name:" %>
-    <%= f.text_field :l_name %>
-    <%= f.label :email, "Email:" %>
-    <%= f.text_field :email %>
-    <%= f.label :password, "Password:" %>
-    <%= f.password_field :password %>
-    <%= f.label :password_confirmation, "Confirm Password:" %>
-    <%= f.password_field :password_confirmation %>
-    <%= f.submit %>
-<% end %>
+<div class="container">
+    <div class="jumbotron">
+        <h1 class="display-3 text-center">Create Account</h1>
+        <%= form_for @user do |f| %>
+        <%= f.label :f_name, "First Name:" %>
+        <%= f.text_field :f_name, class: 'form-control' %>
+        <%= f.label :l_name, "Last Name:" %>
+        <%= f.text_field :l_name, class: 'form-control' %>
+        <%= f.label :email, "Email:" %>
+        <%= f.text_field :email, class: 'form-control' %>
+        <%= f.label :password, "Password:" %>
+        <%= f.password_field :password, class: 'form-control' %>
+        <%= f.label :password_confirmation, "Confirm Password:" %>
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <div class="btn-div text-center">
+            <%= f.submit class: 'btn btn-success btn-lg' %>
+        </div>
+    <% end %>
+    </div>
+</div>
