--- a/app/views/partials/_sidebar.html.erb
+++ b/app/views/partials/_sidebar.html.erb
@@ -5,7 +5,7 @@
                     <%= link_to  "Home", user_path(current_user) %>
                 </li>
                 <li class="avatar">
-                    <%= image_tag  "avatar.png" %> <br>
+                    <%= image_tag  "avatar.png", class: 'avatar-pic' %> <br>
                     Welcome <%= current_user.f_name %>
                 </li>
                 <li class="dropdown">
@@ -14,22 +14,20 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenu">
                         <%= link_to  "View All Blogs", categories_path %>
+                        <div class="dropdown-divider"></div>
+                        <%= link_to  "Personal Blogs", user_blogs_path(current_user.id) %>
+                        <%= link_to  "Create Blog", new_user_blog_path(current_user.id) %>
+                        <%= link_to  "Comments Made", user_comments_path(current_user.id) %>
                     </div>
                 </li>
                 <li>
-                    <%= link_to  "Personal Blogs", user_blogs_path(current_user.id) %>
+                    <a href="">About</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <%= link_to  "User Settings", edit_user_path(current_user.id) %>
                 </li>
                 <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Search</a>
                 </li>
             </ul>
         </div>
