--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,9 +1,19 @@
-<h1>Blogs#show</h1>
-<h2><%= @blog.title %></h2>
+<div class="container">
+        <div class="jumbotron text-center">
+            <h1 class="display-3 text-center"><%= @blog.title %></h1>
+            <p class="lead">
+                --- <%= @blog.body %> ---
+            </p>
+            <div class="btn-div">
+                <%= link_to  "Edit Blog", edit_user_blog_path(current_user.id, @blog), class:'btn btn-warning'%>
+                <%= link_to  "Delete Blog", delete_user_blog_path, method: "delete", class:'btn btn-danger' %>
+            </div>
+            <div class="btn-div">
+                <%= link_to  "Go Back", user_blogs_path(current_user.id), class: 'btn btn-primary' %>
+            </div>
+        </div>
+    </div>
 
-<%= link_to  "Edit Blog", edit_user_blog_path(@blog) %>
-
-<%= link_to  "Delete Blog", delete_user_blog_path, method: "delete" %>
 
 
-<%= link_to  "Go Back", user_blogs_path %>
+
