--- a/app/views/public_blogs/show.html.erb
+++ b/app/views/public_blogs/show.html.erb
@@ -1,14 +1,20 @@
-<h1>PublicBlogs#show</h1>
-<h1><%= @blog.title %></h1>
-<h2><%= @blog.body %></h2>
+<div class="container">
+    <div class="jumbotron text-center">
+            <%= link_to  "Go Back", category_path(params[:category_id]), class: 'btn btn-primary' %>
+        <h1 class="display-3 text-center"><%= @blog.title %></h1>
+        <p class="lead">
+            <%= @blog.body %>
+        </p>
+        <% @blog.comments.each do |c| %>
+            <h5 style="margin-bottom:15px;" class="text-warning"><%= c.body %> <span class="text-dark">by: <%= c.user.f_name %> <%= c.user.l_name %></span> </h5>
+        <% end %>
+        <div class="btn-div">
+            <%= link_to  "Leave Comment", new_category_public_blog_comment_path(params[:category_id], @blog.id), class: 'btn btn-warning' %>
+        </div>
+    </div>
+</div>
 
-<% @blog.comments.each do |c| %>
-    <h5><%= c.body %> by: <%= c.user.id %></h5>
-<% end %>
 
 
 
-<%= link_to  "Leave Comment", new_category_public_blog_comment_path(params[:category_id], @blog.id) %>
 
-
-<%= link_to  "Go Back", category_path(params[:category_id]) %>
