--- a/app/views/partials/_sidebar.html.erb
+++ b/app/views/partials/_sidebar.html.erb
@@ -5,7 +5,8 @@
                     <%= link_to  "Home", user_path(current_user) %>
                 </li>
                 <li class="avatar">
-                    <%= image_tag  "avatar.png", class: 'avatar-pic' %> <br>
+                    <%= image_tag @user.image.url, class: 'avatar-pic' %>
+                    <br>
                     Welcome <%= current_user.f_name %>
                 </li>
                 <li class="dropdown">
@@ -21,7 +22,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="">About</a>
+                    <%= link_to  "About", about_path %>
                 </li>
                 <li>
                     <%= link_to  "User Settings", edit_user_path(current_user.id) %>
