--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,6 +6,8 @@
             <%= f.text_field :f_name, class: 'form-control' %>
             <%= f.label :l_name, "Last Name:" %>
             <%= f.text_field :l_name, class: 'form-control' %>
+            <%= f.label :image, "Profile Picture:" %>
+            <%= f.file_field :image, class:'form-control' %>
             <%= f.label :password, "Password:" %>
             <%= f.password_field :password, class: 'form-control' %>
             <%= f.label :password_confirmation, "Confirm Password:" %>
