--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,6 +8,8 @@
         <%= f.text_field :l_name, class: 'form-control' %>
         <%= f.label :email, "Email:" %>
         <%= f.text_field :email, class: 'form-control' %>
+        <%= f.label :image, "Profile Picture:" %>
+        <%= f.file_field :image, class:'form-control' %>
         <%= f.label :password, "Password:" %>
         <%= f.password_field :password, class: 'form-control' %>
         <%= f.label :password_confirmation, "Confirm Password:" %>
