--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,7 @@
 //  Index users pages
 .jumbotron {
     margin-top: 8%;
-    background: rgba(233, 236, 239, 0.9)
+    background: rgba(233, 236, 239, 0.9);
 }
 
 // Sign up and Log In
