--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark">
+<nav class="navbar fixed-bottom navbar-light bg-dark">
     <div class="container-fluid">
         <div class="pull-left text-left">
             <a class="navbar-brand text-white" href="/users"><%= icon('cloud') %> BlogIT <%= icon('pencil') %></a>
@@ -9,4 +9,4 @@
             </p>
         </div>
     </div>
-</footer>
+ </nav>
