styling changes to blog border

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -178,7 +178,7 @@ body {
 
 // user page
 .border-blog {
-    border-radius: 50%;
+    border-radius: 50px;
     border-width: 4px !important;
     margin-bottom: 2%;
 }
