--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,13 +2,15 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+body {
+  background-image: image-url("bg.jpg");
+  background-size: cover;   
+  background-repeat: round;
+}
+
 #main {
     width: 100%;
     height: auto;
-    background-image: image-url("bg.jpg");
-    background-size: cover;   
-    background-repeat: round; 
-    min-height: 800px;
 }
 
 .header-link {
