--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,8 +4,9 @@
 
 body {
   background-image: image-url("bg.jpg");
-  background-size: cover;   
-  background-repeat: round;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 #main {
