--- a/app/views/partials/_flash.html.erb
+++ b/app/views/partials/_flash.html.erb
@@ -1,6 +1,9 @@
 <% flash.each do |key, value| %>
     <div class="alert alert-<%= key %>">
      <%= value %>
+     <button type="button" class="close pull-right" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
     </div>
 <% end %>
     
