--- a/app/views/partials/_flash.html.erb
+++ b/app/views/partials/_flash.html.erb
@@ -6,4 +6,10 @@
     </button>
     </div>
 <% end %>
+
+<script>
+    $(".close").on("click", function() {
+        $('.alert').remove();
+    })
+</script>
     
