--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -14,6 +14,7 @@
             <p class="lead text-danger text-center">Deleting comment will be permanent</p>
             <div class="btn-div text-center">
                 <%= link_to  "Delete", delete_comment_path(current_user.id, @comment.id), class: 'btn btn-sm btn-danger' %>
+                <%= link_to  "Delete Comment", delete_comment_path(current_user.id, @comment.id), method: 'delete', class:'btn btn-danger btn-sm' %>
             </div>
         </div>
     </div>
